; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_sysdir.c_git_sysdir_get.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_sysdir.c_git_sysdir_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@git_sysdir__dirs = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_sysdir_get(i32** %0, i64 %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i64, align 8
  store i32** %0, i32*** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32**, i32*** %3, align 8
  %6 = call i32 @assert(i32** %5)
  %7 = load i32**, i32*** %3, align 8
  store i32* null, i32** %7, align 8
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @git_sysdir_check_selector(i64 %8)
  %10 = call i32 @GIT_ERROR_CHECK_ERROR(i32 %9)
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @git_sysdir__dirs, align 8
  %12 = load i64, i64* %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %12
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32**, i32*** %3, align 8
  store i32* %14, i32** %15, align 8
  ret i32 0
}

declare dso_local i32 @assert(i32**) #1

declare dso_local i32 @GIT_ERROR_CHECK_ERROR(i32) #1

declare dso_local i32 @git_sysdir_check_selector(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
